# PennCloud

./: .gitignore  CMakeLists.txt  README.md  config.ini  script_template.sh.in
.github/workflows/: docker-kvs.yml
HTTP_Server/: .gitignore  CMakeLists.txt  Makefile
HTTP_Server/include/: helper.hh  request.hh  requestImp.hh  response.hh  responseImp.hh  server.hh
HTTP_Server/src/: helper.cc  server.cc  test_client.cc  test_master.cc  test_worker.cc
clusters/coordinator/: _id
clusters/worker1/: _id
clusters/worker2/: _id
clusters/worker3/: _id
console/: .gitignore  CMakeLists.txt  Makefile
console/include/: console.hh  handler.hh
console/public/: admin.html  index.html  viewTable.html
console/public/scripts/: index.js  kvs.js  kvsNode.js
console/public/styles/: index.css  kvs.css
console/src/: console.cc  handler.cc
frontend/: .gitignore  CMakeLists.txt  Makefile
frontend/include/: frontend.hh  loginService.hh  webmailService.hh  webstorageService.hh
frontend/public/: app.js  index.html  manifest.json  redirected.html
frontend/public/pages/: email.html  email.js  home.html  home.js  navbar.js  storage.html  storage.js
frontend/public/styles/: email_style.css
frontend/src/: frontend.cc
frontend/webstorage/linhphan/: file3.txt  fileIndex.txt
kvs/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint.sh  grpc-setup.sh  start-server-6.sh
kvs/client/: CMakeLists.txt
kvs/client/src/: KVSCTRLClient.cc  KVSCTRLClient.hpp  KVSClient.cc  KVSClient.hpp
kvs/controller/: CMakeLists.txt
kvs/controller/src/: KVSController.hpp  main.cc
kvs/proto/: controller.proto  paxos.proto  server.proto
kvs/server/: CMakeLists.txt
kvs/server/src/: KVSServer.hpp  Logger.hpp  Paxos.hpp  Scheduler.hpp  Store.hpp  main.cc
kvs/test/: CMakeLists.txt
kvs/test/src/: test-client.cc  test-controller.cc  test-remote.cc  test-scheduler.cc
stress_test/: .gitignore  Makefile  final_report.ipynb  load-balancing.json  stress_test.cc  thread10.json  thread100.json  thread1000.json  thread10000.json
webmail/: .gitignore  CMakeLists.txt  Makefile  README
webmail/include/: MX_helper.hh  echoserver.hh  io_helper.hh  pop3_command.hh  pop3_msg.hh  smpt_command.hh  smpt_msg.hh  webmail.hh
webmail/src/: MX_helper.cc  echoserver.cc  forward_server.cc  io_helper.cc  pop3.cc  pop3_command.cc  pop3_msg.cc  smpt_command.cc  smpt_msg.cc  smtp.cc
